amaroK Changelog
==================
(c) 2002, 2003 by Mark Kretschmann and the amaroK team. GPL License.


  * fix: by muesli: make playlist searches a bit faster at the expense of memory
  * fix: (partial fix) bitrate/samplerate font overlap at large font sizes
  * change: less staccato loading of widgets
  * change: pause makes the analyser bars fall to zero rather than just vanish
  * add: xfade when starting tracks by doubleclick
  * fix: global shortcuts can now be changed
  * fix: tracks skipping randomly
  * change: "BrowserWin Enabled" on by default
  * change: "Save Playlist" on by default
  * change: "Show Metainfo" on by default 
  * fix: make loading playlist not block UI
  * fix: on startup load playlist after UI is shown
  * change: "Software Mixer Only" on by default
  * fix: make timedisplay also work for streams
  * fix: volume slider adjusting
  * fix: when dropping tracks to PL, order will stay the same as in FileBrowser
  * add: FileBrowser sortable by clicking on header
  * add: analyzer that distorts a bitmap
  * add: multiple analyzers now possible
  * add: "Software Mixer Only" option
  * Removed stale sigplay()
  * Cleaned a couple "deprecated" warnings
  * add: undo and redo playlist actions
  * fix: rewritten config dialog and moved into separate file
  * add: started configurable colors
  * change: spectrum analyser bars now have dynamics, ie. they move smoothly between values
  * add: mouse wheel over systray icon changes the track, hold shift to change the volume
  * change: rearranged menu order for systray (quit = last)
  * change: moved volume slider to the right, lets see if this is better
  * add: started a font selection page in settings
  * fix: Stream urls are now properly demangled/unescaped (%20 => space etc)

VERSION 0.6.91:
  * fix: ExpandButton submenu now slightly delayed
  * fix: dropping items into playlist
  * add: drop-target indicator line in PlaylistWidget, providing visual feedback
  * add: tray menu